# did-verification-consensus-protocol

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/adoption/: Cargo.toml  README.md
pallets/adoption/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/did/: Cargo.toml  README.md
pallets/did/rpc/: Cargo.toml  README.md
pallets/did/rpc/runtime-api/: Cargo.toml  README.md
pallets/did/rpc/runtime-api/src/: lib.rs
pallets/did/rpc/src/: lib.rs
pallets/did/src/: benchmarking.rs  did.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/verification-protocol/: Cargo.toml
pallets/verification-protocol/src/: invalidate.rs  lib.rs  mock.rs  tests.rs  types.rs  verification_process.rs
pallets/verification-protocol/src/tests/: incentives.rs  mock.rs  mod.rs  round_based_tests.rs  tests.rs
pallets/verifiers/: Cargo.toml
pallets/verifiers/src/: lib.rs  mock.rs  tests.rs  types.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: constants.rs  lib.rs
runtime/devnet/: Cargo.toml
runtime/devnet/src/: lib.rs
runtime/devnet/src/pallets/: bags_list.rs  contracts.rs  election_provider_multi_phase.rs  elections_phragmen.rs  grandpa.rs  mod.rs  scheduler.rs  session.rs  staking.rs  timestamp.rs
runtime/local/: Cargo.toml
runtime/local/src/: chain_extension.rs  constants.rs  lib.rs
runtime/local/src/pallets/: babe.rs  balances.rs  collective.rs  contracts.rs  democracy.rs  election_provider_multi_phase.rs  grandpa.rs  im_online.rs  indices.rs  mmr.rs  mod.rs  multisig.rs  nomination_pools.rs  preimage.rs  scheduler.rs  system.rs  transaction_payment.rs  treasury.rs
runtime/src/: chain_extension.rs  constants.rs  lib.rs
scripts/: testnet.sh
scripts/session_keys/: audi1  audi2  audi3  audi4  babe1  babe2  babe3  babe4  gran1  gran2  gran3  gran4  imol1  imol2  imol3  imol4  run.sh
